# xyz_client

./: CMakeLists.txt
app1/: CMakeLists.txt  main.cpp
app2/: CMakeLists.txt  main.cpp
